@@ -101,14 +101,16 @@ interface ChppciRobot {
   */
 
   /**
-  * \brief Create joint.
-  * \param inJointName name of the joint.
-  * \param inJointType type of joint in {"anchor", "freeflyer", "plan", "rotation", "translation"}.
-  * \param pos position of the joint.
-  * \param inJointBound sequence of joint dof bounds in order [v0_min,v0_max,v1_min,v1_max,...]. If vi_min > vi_max, dof of rank i is not bounded. If size of sequence is different from twice the number of dofs, no dof is bounded.
-  * \param inDisplay Whether the path of the joint should be displayed in interface.
+     \brief Create joint.
+     \param inJointName name of the joint.
+     \param inJointType type of joint in {"anchor", "freeflyer", "plan", "rotation", "translation"}.
+     \param pos position of the joint.
+     \param inJointBound sequence of joint dof bounds in order [v0_min,v0_max,v1_min,v1_max,...]. 
+     \li If vi_min > vi_max, dof of rank i is not bounded and bounds (for random sampling) are set to [v_max, v_min].
+     \li If size of sequence is different from twice the number of dofs, no dof is bounded.
+     \param inDisplay Whether the path of the joint should be displayed in interface.
 
-   * \return 0 if success, -1 if failure.
+    \return 0 if success, -1 if failure.
   */
   short createJoint(in string inJointName, in string inJointType, in Configuration pos, 
 		    in jointBoundSeq inJointBound, in boolean inDisplay);
@@ -122,7 +124,7 @@ interface ChppciRobot {
 
   /**
    * \brief set a bound for the joint
-   * \param jointId name of the joint.
+   * \param jointId index of the joint in the robot.
    * \param inJointBound sequence of joint dof bounds in order [v0_min,v0_max,v1_min,v1_max,...]. If vi_min > vi_max, dof of rank i is not bounded. If size of sequence is different from twice the number of dofs, no dof is bounded.
    * \param problemId Id of the problem containing the robot.
   */
@@ -132,7 +134,7 @@ interface ChppciRobot {
    * \brief Set whether a joint is visible.
 
    * \param problemId Id of the problem containing the robot.
-   * \param jointId name of the joint.
+   * \param jointId index of the joint in the robot.
    * \param inVisible wether the joint should be visible in the interface.
    *
    * \note When running without interface, this request has no effect.
@@ -143,12 +145,23 @@ interface ChppciRobot {
    * \brief Set whether a joint is transparent.
 
    * \param problemId Id of the problem containing the robot.
-   * \param jointId name of the joint.
+   * \param jointId index of the joint in the robot.
    * \param inTransparent wether the joint should be transparent in the interface.
    *
    * \note When running without interface, this request has no effect.
   */
   short setJointTransparent(in short problemId, in short jointId, in boolean inTransparent);
+
+  /**
+   * \brief Set whether paths of a joint should be displayed.
+
+   * \param problemId Id of the problem containing the robot.
+   * \param jointId index of the joint in the robot.
+   * \param inDisplayPath wether paths of the joint should be displayed in the interface.
+   *
+   * \note When running without interface, this request has no effect.
+  */
+  short setJointDisplayPath(in short problemId, in short jointId, in boolean inDisplayPath);
 
   /**
    * \brief set locking/unlocking  for the joint
@@ -247,7 +260,7 @@ interface ChppciRobot {
   */
   
   /** \brief see if the link is colliding.
-      \param jointId the number of the joint [in Kineo] 
+      \param jointId index of the joint in robot
       \param problemId TODO
       \param result TODO
   */
